--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -12,6 +12,7 @@ html {
 body {
   display: flex;
   flex-direction: column;
+  font-family: "poppins" , "Arial" , sans-serif;
   height: 100%;
   margin: 0;
 }
