--- a/sass/blocks/_footer.scss
+++ b/sass/blocks/_footer.scss
@@ -1,4 +1,6 @@
 .footer-top {
+    width: 968px;
+    margin: auto;
     display: flex;
     padding: 14px 36px 0 51px;
     background-color: #02897A;
