add site header

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,4 +2,7 @@
 @import "fonts";
 @import "normalize";
 @import "general";
-@import "./blocks/blocks"
+@import "./blocks/blocks";
+
+@import "./blocks/customers";
+
