--- a/sass/blocks/_customers.scss
+++ b/sass/blocks/_customers.scss
@@ -58,7 +58,7 @@
    padding: 114px 37px 34px 37px;
    border: 2px solid #DEDEDE;
    border-radius: 20px;
-
+   
    &::before{
       position: absolute;
       background-image: url("../images/icon.svg");
@@ -111,8 +111,88 @@
    font-weight: 200px;
    font-size: 16px;
    line-height: 113%;
+   line-height: 27px;
    color: #22343D;
    letter-spacing: 0.2px;
 }
 
 //----------------------------------------- product section finish------------------------------------
+
+//----------------------------------- work section begin----------------------------------
+
+.work-section{
+   background-color: #fff;
+}
+.work-content{
+   padding-top: 100px;
+   padding-bottom: 110px;
+}
+.work-title{
+   color: #22343D;
+   text-align: center;
+   font-weight: bold;
+   font-size: 34px;
+   line-height: 100%;
+}
+.work-list{
+   list-style-type: none;
+   margin: 0px;
+   padding: 0px;
+   margin-top: 73px;
+   margin-bottom: 70px;
+}
+.work-item{
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   margin-bottom: 100px;
+}
+.work-item:nth-child(even){
+   flex-direction: row-reverse;
+}
+.work-item:nth-child(3){
+   margin-bottom: 0px;
+}
+.work-box{
+   width: 100%;
+   max-width: 440px;
+}
+.work-str{
+   display: inline-block;
+   color: #22343D;
+   font-weight: 500;
+   font-size: 20px;
+   line-height: 100%;
+   margin-bottom: 16px;
+}
+.for-title{
+   font-weight: 600;
+   font-size: 24px;
+   line-height: 100%;
+   color: #22343D;
+   margin-bottom: 16px;
+}
+.work-text{
+   font-weight: 300;
+   font-size: 16px;
+   line-height: 117%;
+   color: #22343D;
+   line-height: 28px;
+}
+.work-link__box{
+   margin: 0px auto;
+   text-align: center;
+}
+.work-link{
+   font-weight: 600;
+   font-size: 18px;
+   line-height: 100%;
+   text-decoration: none;
+   color: #fff;
+   background-color: #02897A;
+   padding: 11px 18px;
+   border-radius: 10px;
+   display: inline-block;
+}
+
+//---------------------------- work section finish-----------------------------
