--- a/sass/blocks/_customers.scss
+++ b/sass/blocks/_customers.scss
@@ -196,3 +196,66 @@
 }
 
 //---------------------------- work section finish-----------------------------
+
+//------------------------------ busines section begin----------------------------
+
+.busines-section{
+   background-color: #F5F5F5;
+}
+.busines-content{
+   padding-top: 35px;
+   padding-bottom: 45px;
+}
+.busines-box{
+   width: 100%;
+   max-width: 537px;
+   margin: 0px auto;
+   text-align: center;
+   margin-bottom: 93px;
+}
+.busines-title{
+   font-weight: bold;
+   font-size: 32px;
+   line-height: 100%;
+   line-height: 48px;
+   color: #22343D;
+}
+.busines-list{
+   list-style-type: none;
+   margin: 0px;
+   padding: 0px;
+   width: 100%;
+   max-width: 700px;
+   margin: 0px auto;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+}
+.busines-item{
+   width: 100%;
+   max-width: 250px;
+   text-align: center;
+}
+.enter-title{
+   margin-top: 27px;
+   margin-bottom: 16px;
+   color: #000;
+   font-weight: 500;
+   font-size: 24px;
+   line-height: 78%;
+}
+.busines-text{
+   font-weight: 400;
+   font-size: 18px;
+   line-height: 119%;
+   line-height: 32px;
+   color: #22343D;
+   margin-bottom: 12px;
+}
+.enter-text{
+   font-weight: 500;
+   font-size: 16px;
+   line-height: 117%;
+   line-height: 28px;
+   color: #000;
+}
