add site footer

--- a/css/main.css
+++ b/css/main.css
@@ -960,4 +960,12 @@ main {
   line-height: 28px;
   color: #000;
 }
+
+.customer-footer {
+  background-color: #F5F5F5;
+}
+
+.diaz-footer {
+  margin-top: 150px;
+}
 /*# sourceMappingURL=main.css.map */
