--- a/sass/blocks/_customers.scss
+++ b/sass/blocks/_customers.scss
@@ -259,3 +259,11 @@
    line-height: 28px;
    color: #000;
 }
+
+
+.customer-footer{
+   background-color: #F5F5F5;
+}
+.diaz-footer{
+   margin-top: 150px;
+}
