--- a/css/main.css
+++ b/css/main.css
@@ -689,6 +689,32 @@ main {
           justify-content: space-between;
 }
 
+@media only screen and (max-width: 790px) {
+  .client-box {
+    -ms-flex-wrap: wrap-reverse;
+        flex-wrap: wrap-reverse;
+  }
+  .client-link {
+    margin-bottom: 50px;
+  }
+}
+
+@media only screen and (max-width: 570px) {
+  .client-content {
+    margin: 0px auto;
+  }
+  .client-box {
+    width: 100%;
+    max-width: 100%;
+    display: block;
+  }
+  .client-link {
+    display: inline-block;
+    margin-bottom: 50px;
+    margin-right: 30px;
+  }
+}
+
 .product-section {
   background-color: #F5F5F5;
 }
@@ -790,6 +816,43 @@ main {
   letter-spacing: 0.2px;
 }
 
+@media only screen and (max-width: 570px) {
+  .product-content {
+    max-width: 100%;
+    margin: 0px auto;
+    text-align: center;
+  }
+  .product-title {
+    text-align: center;
+    color: #22343D;
+    font-weight: bold;
+    font-size: 32px;
+    line-height: 100%;
+    margin-bottom: 50px;
+  }
+  .product-list {
+    text-align: center;
+    max-width: 100%;
+    margin: 0px auto;
+    display: block;
+  }
+  .product-item {
+    margin: 0px auto;
+    margin-bottom: 30px;
+  }
+  .product-item::before {
+    position: absolute;
+    background-image: url("../images/icon.svg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width: 51px;
+    height: 50px;
+    top: 32px;
+    left: 130px;
+    content: "";
+  }
+}
+
 .work-section {
   background-color: #fff;
 }
@@ -886,6 +949,15 @@ main {
   display: inline-block;
 }
 
+@media only screen and (max-width: 570px) {
+  .work-item {
+    display: block;
+  }
+  .work-box {
+    margin-top: 80px;
+  }
+}
+
 .busines-section {
   background-color: #F5F5F5;
 }
@@ -959,6 +1031,12 @@ main {
   line-height: 117%;
   line-height: 28px;
   color: #000;
+}
+
+@media only screen and (max-width: 570px) {
+  .busines-list {
+    display: block;
+  }
 }
 
 .customer-footer {
