--- a/sass/blocks/_customers.scss
+++ b/sass/blocks/_customers.scss
@@ -23,6 +23,30 @@
    align-items: center;
    justify-content: space-between;
 }
+@media only screen and (max-width:790px){
+   .client-box{
+      flex-wrap: wrap-reverse;
+   }
+   .client-link{
+      margin-bottom: 50px;
+   }
+}
+
+@media only screen and (max-width:570px){
+   .client-content{
+      margin: 0px auto;
+   }
+   .client-box{
+      width: 100%;
+      max-width: 100%;
+      display: block;
+   }
+   .client-link{
+      display: inline-block;
+      margin-bottom: 50px;
+      margin-right: 30px;
+   }
+}
 
 //-------------------------------------------------- header finish-------------------------------------
 //--------------------------------------------- product section begin------------------------
@@ -116,6 +140,43 @@
    letter-spacing: 0.2px;
 }
 
+@media only screen and (max-width:570px){
+   .product-content{
+      max-width: 100%;
+      margin: 0px auto;
+      text-align: center;
+   }
+   .product-title{
+      text-align: center;
+      color: #22343D;
+      font-weight: bold;
+      font-size: 32px;
+      line-height: 100%;
+      margin-bottom: 50px;
+   }
+   .product-list{
+      text-align: center;
+      max-width: 100%;
+      margin: 0px auto;
+      display: block;
+   }
+   .product-item{
+      margin: 0px auto;
+      margin-bottom: 30px;
+      &::before{
+         position: absolute;
+         background-image: url("../images/icon.svg");
+         background-repeat: no-repeat;
+         background-size: 100%;
+         width: 51px;
+         height: 50px;
+         top: 32px;
+         left: 130px;
+         content: "";
+      }
+   }
+}
+
 //----------------------------------------- product section finish------------------------------------
 
 //----------------------------------- work section begin----------------------------------
@@ -194,6 +255,14 @@
    border-radius: 10px;
    display: inline-block;
 }
+@media only screen and (max-width:570px){
+   .work-item{
+      display: block;
+   }
+   .work-box{
+      margin-top: 80px;
+   }
+}
 
 //---------------------------- work section finish-----------------------------
 
@@ -258,6 +327,12 @@
    line-height: 117%;
    line-height: 28px;
    color: #000;
+}
+
+@media only screen and (max-width:570px){
+   .busines-list{
+      display: block;
+   }
 }
 
 
