add responsive change

--- a/css/main.css
+++ b/css/main.css
@@ -1034,8 +1034,19 @@ main {
 }
 
 @media only screen and (max-width: 570px) {
+  .busines-content {
+    width: 100%;
+    max-width: 100%;
+    text-align: center;
+    margin: 0px auto;
+  }
   .busines-list {
     display: block;
+    text-align: center;
+    margin: 0px auto;
+  }
+  .busines-item {
+    max-width: 100%;
   }
 }
 
