Add changes to html

--- a/sass/blocks/_blocks.scss
+++ b/sass/blocks/_blocks.scss
@@ -1,6 +1,9 @@
 @import "visually-hidden";
 @import "container";
-@import "header";
+@import "header"; 
+@import "hero"; 
+@import "aside"; 
+@import "service";
 @import "footer";
 
 
