--- a/css/main.css
+++ b/css/main.css
@@ -1,57 +1,45 @@
 /* poppins-regular - latin */
 @font-face {
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/poppins-v20-latin-regular.woff2") format("woff2"), url("../fonts/poppins-v20-latin-regular.woff") format("woff");
-  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  src: url("../fonts/poppins-v20-latin-regular.woff2") format("woff2"), url("../fonts/poppins-v20-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
-
 /* poppins-500 - latin */
 @font-face {
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-style: normal;
   font-weight: 500;
-  src: url("../fonts/poppins-v20-latin-500.woff2") format("woff2"), url("../fonts/poppins-v20-latin-500.woff") format("woff");
-  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  src: url("../fonts/poppins-v20-latin-500.woff2") format("woff2"), url("../fonts/poppins-v20-latin-500.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
-
 /* poppins-600 - latin */
 @font-face {
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-style: normal;
   font-weight: 600;
-  src: url("../fonts/poppins-v20-latin-600.woff2") format("woff2"), url("../fonts/poppins-v20-latin-600.woff") format("woff");
-  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  src: url("../fonts/poppins-v20-latin-600.woff2") format("woff2"), url("../fonts/poppins-v20-latin-600.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
-
 /* poppins-700 - latin */
 @font-face {
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/poppins-v20-latin-700.woff2") format("woff2"), url("../fonts/poppins-v20-latin-700.woff") format("woff");
-  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  src: url("../fonts/poppins-v20-latin-700.woff2") format("woff2"), url("../fonts/poppins-v20-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
-
 /* inter-500 - latin */
 @font-face {
-  font-family: 'Inter';
+  font-family: "Inter";
   font-style: normal;
   font-weight: 500;
-  src: url("../fonts/inter-v12-latin-500.woff2") format("woff2"), url("../fonts/inter-v12-latin-500.woff") format("woff");
-  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  src: url("../fonts/inter-v12-latin-500.woff2") format("woff2"), url("../fonts/inter-v12-latin-500.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
-
 /* montserrat-600 - latin */
 @font-face {
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   font-style: normal;
   font-weight: 600;
-  src: url("../fonts/montserrat-v25-latin-600.woff2") format("woff2"), url("../fonts/montserrat-v25-latin-600.woff") format("woff");
-  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  src: url("../fonts/montserrat-v25-latin-600.woff2") format("woff2"), url("../fonts/montserrat-v25-latin-600.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
-
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -60,10 +48,8 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 html {
-  line-height: 1.15;
-  /* 1 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
 }
 
 /* Sections
@@ -98,13 +84,9 @@ h1 {
  * 2. Show the overflow in Edge and IE.
  */
 hr {
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-  /* 1 */
-  height: 0;
-  /* 1 */
-  overflow: visible;
-  /* 2 */
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
 }
 
 /**
@@ -112,10 +94,8 @@ hr {
  * 2. Correct the odd `em` font sizing in all browsers.
  */
 pre {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
 }
 
 /* Text-level semantics
@@ -132,13 +112,10 @@ a {
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
  */
 abbr[title] {
-  border-bottom: none;
-  /* 1 */
-  text-decoration: underline;
-  /* 2 */
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
   -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
-  /* 2 */
+          text-decoration: underline dotted; /* 2 */
 }
 
 /**
@@ -156,10 +133,8 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
 }
 
 /**
@@ -209,14 +184,10 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: inherit;
-  /* 1 */
-  font-size: 100%;
-  /* 1 */
-  line-height: 1.15;
-  /* 1 */
-  margin: 0;
-  /* 2 */
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
 }
 
 /**
@@ -224,8 +195,7 @@ textarea {
  * 1. Show the overflow in Edge.
  */
 button,
-input {
-  /* 1 */
+input { /* 1 */
   overflow: visible;
 }
 
@@ -234,8 +204,7 @@ input {
  * 1. Remove the inheritance of text transform in Firefox.
  */
 button,
-select {
-  /* 1 */
+select { /* 1 */
   text-transform: none;
 }
 
@@ -243,9 +212,9 @@ select {
  * Correct the inability to style clickable types in iOS and Safari.
  */
 button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
+[type=button],
+[type=reset],
+[type=submit] {
   -webkit-appearance: button;
 }
 
@@ -253,9 +222,9 @@ button,
  * Remove the inner border and padding in Firefox.
  */
 button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
@@ -264,9 +233,9 @@ button::-moz-focus-inner,
  * Restore the focus styles unset by the previous rule.
  */
 button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
@@ -284,19 +253,12 @@ fieldset {
  *    `fieldset` elements in all browsers.
  */
 legend {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  /* 1 */
-  color: inherit;
-  /* 2 */
-  display: table;
-  /* 1 */
-  max-width: 100%;
-  /* 1 */
-  padding: 0;
-  /* 3 */
-  white-space: normal;
-  /* 1 */
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
 }
 
 /**
@@ -317,20 +279,17 @@ textarea {
  * 1. Add the correct box sizing in IE 10.
  * 2. Remove the padding in IE 10.
  */
-[type="checkbox"],
-[type="radio"] {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */
+[type=checkbox],
+[type=radio] {
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
 }
 
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
+[type=number]::-webkit-inner-spin-button,
+[type=number]::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -338,17 +297,15 @@ textarea {
  * 1. Correct the odd appearance in Chrome and Safari.
  * 2. Correct the outline style in Safari.
  */
-[type="search"] {
-  -webkit-appearance: textfield;
-  /* 1 */
-  outline-offset: -2px;
-  /* 2 */
+[type=search] {
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
 }
 
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
  */
-[type="search"]::-webkit-search-decoration {
+[type=search]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -357,10 +314,8 @@ textarea {
  * 2. Change font properties to `inherit` in Safari.
  */
 ::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  /* 1 */
-  font: inherit;
-  /* 2 */
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
 }
 
 /* Interactive
@@ -401,21 +356,15 @@ html {
 }
 
 *, *::after, *::before {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
 body {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  font-family: "poppins" , "Arial" , sans-serif;
+  flex-direction: column;
+  font-family: "poppins", "Arial", sans-serif;
   height: 100%;
   margin: 0;
 }
@@ -429,9 +378,7 @@ img {
 }
 
 main {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  flex-grow: 1;
 }
 
 .visually-hidden {
@@ -457,12 +404,8 @@ main {
 }
 
 .site-header__inner {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 .logo {
@@ -474,12 +417,8 @@ main {
 }
 
 .navbar__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   list-style-type: none;
 }
 
@@ -529,11 +468,322 @@ main {
   background-color: #fff;
 }
 
+.site__hero {
+  margin: 76px 0 123px;
+}
+
+.hero__inner {
+  display: flex;
+  justify-content: space-between;
+}
+
+.hero__inner__blog {
+  width: 100%;
+  max-width: 546px;
+}
+
+.hero__inner__title {
+  margin: 0;
+  margin-bottom: 24px;
+  width: 100%;
+  max-width: 400px;
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 149%;
+  color: #22343D;
+}
+
+.hero__inner__text {
+  margin-bottom: 24px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 160%;
+  color: #22343D;
+}
+
+.hero__inner__form {
+  margin-bottom: 24px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 469px;
+  padding: 8px;
+  border: 1px solid #EAEAEA;
+  border-radius: 100px;
+}
+
+.hero__inner__form__label {
+  padding-left: 10px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 100%;
+  color: #22343D;
+}
+
+.hero__inner__form__input {
+  display: inline-block;
+  border: none;
+  outline: none;
+}
+
+.hero__inner__form__button {
+  margin-left: 115px;
+  background: #02897A;
+  border: none;
+  border-radius: 100px;
+  padding: 29px 25px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 0px;
+  color: #FFFFFF;
+}
+
+.hero__inner__content__text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  color: #22343D;
+}
+
+.hero__inner__content {
+  display: flex;
+  align-items: center;
+}
+
+.hero__inner__content__link {
+  text-decoration: none;
+}
+
+.hero__inner__content__img {
+  margin-right: 9px;
+}
+
+.hero__inner__content__span {
+  display: inline-block;
+  color: #02897A;
+}
+
+.hero__inner__contactis {
+  position: relative;
+}
+
+.hero__inner__contactis::before {
+  position: absolute;
+  right: -102px;
+  bottom: -50px;
+  width: 359px;
+  height: 263px;
+  background-image: url("../images/hero-img-befor.png");
+  background-size: 100%;
+  content: "";
+}
+
+.aside__inner__title {
+  margin: 0;
+  margin-bottom: 8px;
+  text-align: center;
+  font-weight: 700;
+  font-size: 34px;
+  line-height: 51px;
+  color: #22343D;
+}
+
+.aside__inner__subtitle {
+  margin-bottom: 32px;
+  text-align: center;
+}
+
+.saide__inner__list {
+  list-style: none;
+  padding-left: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 32px;
+}
+
+.aside__inner__item {
+  margin-bottom: 32px;
+  margin-right: 32px;
+  width: 100%;
+  max-width: 348px;
+  border-radius: 8px;
+  background: #FFFFFF;
+  border: 1px solid #E5E5E5;
+}
+
+.aside__inner__item:nth-child(3) {
+  margin-right: 0;
+}
+
+.aside__inner__item:nth-child(6) {
+  margin-right: 0;
+}
+
+.aside__inner__img {
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+
+.aside__inner__content {
+  padding: 22px 24px 40px;
+}
+
+.aside__inner__strong {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 175%;
+  color: #22343D;
+}
+
+.aside__inner__span {
+  font-weight: 700;
+  font-size: 16px;
+  color: #22343D;
+}
+
+.aside__inner__content__title {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 167%;
+  color: #22343D;
+}
+
+.aside__inner__str {
+  text-align: center;
+  margin-bottom: 160px;
+}
+
+.aside__inner__str__starong {
+  vertical-align: middle;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 144%;
+  color: #22343D;
+}
+
+.aside__inner__svg {
+  vertical-align: middle;
+  margin-left: 8px;
+}
+
+.service__inner__title {
+  margin-bottom: 27px;
+  text-align: center;
+  font-weight: 700;
+  font-size: 34px;
+  line-height: 168%;
+  text-align: center;
+  color: #252B42;
+}
+
+.service__inner__subtitle {
+  width: 100%;
+  max-width: 312px;
+  margin: 0 auto;
+  text-align: center;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 156%;
+  text-align: center;
+  color: #374754;
+  margin-bottom: 65px;
+}
+
+.service__inner__servis {
+  text-align: center;
+  margin-bottom: 64px;
+}
+
+.service-end__link {
+  margin-right: 21px;
+  text-decoration: none;
+}
+
+.service-end__link:nth-child(3) {
+  margin-right: 0;
+}
+
+.service__inner__ayfirem {
+  width: 100%;
+  max-width: 871px;
+  margin: 0 auto;
+  margin-bottom: 60px;
+}
+
+.service__inner__forms {
+  width: 100%;
+  max-width: 868px;
+  margin: 0 auto;
+  padding: 52px 50px;
+  border: 1px solid #F5F5F5;
+  border-radius: 8px;
+  margin-bottom: 149px;
+}
+
+.service__inner__forms__title {
+  margin: 0;
+  text-align: center;
+  margin-bottom: 45px;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 138%;
+  color: #252B42;
+}
+
+.service__inner__forms__subtitle {
+  display: flex;
+  flex-direction: column;
+}
+
+.service__inner__forms__label {
+  border-radius: 39px;
+  border: 1px solid #EAEAEA;
+  padding: 19px 20px;
+  width: 100%;
+  background: #F5F5F5;
+  margin-bottom: 45px;
+}
+
+.service__inner__forms__input {
+  background: #F5F5F5;
+  display: inline-block;
+  border: none;
+  outline: none;
+}
+
+.service__inner__forms__textarea {
+  width: 100%;
+  background: #F5F5F5;
+  border: 1px solid #EAEAEA;
+  margin-bottom: 45px;
+}
+
+.service__inner__forms__textarea_active {
+  padding: 10px;
+  width: 100%;
+  background: #F5F5F5;
+  margin-bottom: 45px;
+  border: none;
+  resize: none;
+  outline: none;
+}
+
+.service__inner__forms__butten {
+  background: #02897A;
+  border-radius: 35px;
+  width: 100%;
+  max-width: 145px;
+  padding: 18px 54px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+  color: #FFFFFF;
+  border: none;
+}
+
 .footer-top {
   width: 968px;
   margin: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding: 14px 36px 0 51px;
   background-color: #02897A;
@@ -570,15 +820,9 @@ main {
 }
 
 .footer-end {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: start;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: start;
+  justify-content: space-between;
 }
 
 .footer-end__link {
@@ -591,13 +835,8 @@ main {
 }
 
 .footer-end__two {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 .footer-end__strong {
@@ -678,27 +917,19 @@ main {
   width: 100%;
   max-width: 860px;
   margin-top: 68px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
 }
 
 @media only screen and (max-width: 790px) {
   .client-box {
-    -ms-flex-wrap: wrap-reverse;
-        flex-wrap: wrap-reverse;
+    flex-wrap: wrap-reverse;
   }
   .client-link {
     margin-bottom: 50px;
   }
 }
-
 @media only screen and (max-width: 570px) {
   .client-content {
     margin: 0px auto;
@@ -714,7 +945,6 @@ main {
     margin-right: 30px;
   }
 }
-
 .product-section {
   background-color: #F5F5F5;
 }
@@ -737,15 +967,9 @@ main {
   margin: 0px;
   padding: 0px;
   margin-top: 50px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .product-item {
@@ -757,7 +981,6 @@ main {
   border: 2px solid #DEDEDE;
   border-radius: 20px;
 }
-
 .product-item::before {
   position: absolute;
   background-image: url("../images/icon.svg");
@@ -785,7 +1008,6 @@ main {
 .way-item {
   padding: 114px 25px 34px 25px;
 }
-
 .way-item::before {
   position: absolute;
   background-image: url("../images/icon-love.svg");
@@ -852,7 +1074,6 @@ main {
     content: "";
   }
 }
-
 .work-section {
   background-color: #fff;
 }
@@ -879,23 +1100,14 @@ main {
 }
 
 .work-item {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   margin-bottom: 100px;
 }
 
 .work-item:nth-child(even) {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
+  flex-direction: row-reverse;
 }
 
 .work-item:nth-child(3) {
@@ -957,7 +1169,6 @@ main {
     margin-top: 80px;
   }
 }
-
 .busines-section {
   background-color: #F5F5F5;
 }
@@ -990,15 +1201,9 @@ main {
   width: 100%;
   max-width: 700px;
   margin: 0px auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .busines-item {
@@ -1049,12 +1254,10 @@ main {
     max-width: 100%;
   }
 }
-
 .customer-footer {
   background-color: #F5F5F5;
 }
 
 .diaz-footer {
   margin-top: 150px;
-}
-/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
