--- a/sass/blocks/_blocks.scss
+++ b/sass/blocks/_blocks.scss
@@ -3,6 +3,9 @@
 // en
 @import "header";
 @import "my-hero";
+@import "enterprice";
+@import "effect";
+@import "asked";
 // en
 @import "header"; 
 @import "hero"; 
